--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "mongodb": "^3.6.1",
     "next": "9.5.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-google-recaptcha": "^2.1.0"
   },
   "devDependencies": {
     "@types/mongodb": "^3.5.27",
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.46",
+    "@types/react-google-recaptcha": "^2.1.0",
     "typescript": "^3.9.7"
   }
 }
